Mevzuat Activity completed - For some reason, bottom navigation bar of all activities are disfunctional.

--- a/app/src/main/res/layout/activity_kurumsal_hakkimizda.xml
+++ b/app/src/main/res/layout/activity_kurumsal_hakkimizda.xml
@@ -8,7 +8,22 @@
     android:background="@color/light_gray"
     >
 
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Hakkımızda"
+        android:textAlignment="center"
+        android:textColor="@color/red"
+        android:textSize="40sp"
+        android:padding="20px"
+        android:layout_alignParentTop="true"
+        android:background="@color/lighter_dark_blue"
+
+        ></TextView>
+
     <ScrollView
+        android:layout_below="@id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="150px">
