--- a/app/src/main/res/layout/activity_kurumsal_planlar.xml
+++ b/app/src/main/res/layout/activity_kurumsal_planlar.xml
@@ -25,6 +25,7 @@
         ></TextView>
 
     <ScrollView
+        android:layout_below="@id/title"
         android:id="@+id/scrollPlanlar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
