Kurumsal menu completely functional with its elements

--- a/app/src/main/res/layout/activity_hizmet_marka.xml
+++ b/app/src/main/res/layout/activity_hizmet_marka.xml
@@ -71,9 +71,7 @@
                         android:fontFamily="@font/sen"
                         android:gravity="center"
                         android:padding="25px"
-                        android:text="Marka Nedir?
-
-Marka, bir teşebbüsün mallarının veya hizmetlerinin diğer teşebbüslerin mallarından veya hizmetlerinden ayırt edilmesini sağlaması ve marka sahibine sağlanan korumanın konusunun açık ve kesin olarak anlaşılmasını sağlayabilecek şekilde sicilde gösterilebilir olması şartıyla kişi adları dâhil sözcükler, şekiller, renkler, harfler, sayılar, sesler ve malların veya ambalajlarının biçimi olmak üzere her tür işaretten oluşabilir."
+                        android:text="Marka, bir teşebbüsün mallarının veya hizmetlerinin diğer teşebbüslerin mallarından veya hizmetlerinden ayırt edilmesini sağlaması ve marka sahibine sağlanan korumanın konusunun açık ve kesin olarak anlaşılmasını sağlayabilecek şekilde sicilde gösterilebilir olması şartıyla kişi adları dâhil sözcükler, şekiller, renkler, harfler, sayılar, sesler ve malların veya ambalajlarının biçimi olmak üzere her tür işaretten oluşabilir."
                         android:textColor="@color/white"
                         android:textSize="16sp" />
 
